* HTML5 Open Reference Guide SNB 요소메뉴

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -34,8 +34,8 @@ Ext.onReady(function(){
 					{text: 'b', leaf: true, href: ['ext/data/elements/b.php', 'ext/data/elements/b_desc.php']},
 					{text: 'base', leaf: true, href: ['ext/data/elements/base.php', 'ext/data/elements/base_desc.php']},
 					{text: 'bdi', leaf: true, href: ['ext/data/elements/bdi.php', 'ext/data/elements/bdi_desc.php']},
-					{text: 'dbo', leaf: true},
-					{text: 'blockquote', leaf: true},
+					{text: 'dbo', leaf: true, href: ['ext/data/elements/bdo.php', 'ext/data/elements/bdo_desc.php']},
+					{text: 'blockquote', leaf: true, href: ['ext/data/elements/blockquote.php', 'ext/data/elements/blockquote_desc.php']},
 					{text: 'body', leaf: true},
 					{text: 'br', leaf: true},
 					{text: 'button', leaf: true}
