* HTML5 Open Reference Guide SNB 요소메뉴 추가

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -36,7 +36,7 @@ Ext.onReady(function(){
 					{text: 'bdi', leaf: true, href: ['ext/data/elements/bdi.php', 'ext/data/elements/bdi_desc.php']},
 					{text: 'dbo', leaf: true, href: ['ext/data/elements/bdo.php', 'ext/data/elements/bdo_desc.php']},
 					{text: 'blockquote', leaf: true, href: ['ext/data/elements/blockquote.php', 'ext/data/elements/blockquote_desc.php']},
-					{text: 'body', leaf: true},
+					{text: 'body', leaf: true, href: ['ext/data/elements/body.php', 'ext/data/elements/body_desc.php']},
 					{text: 'br', leaf: true},
 					{text: 'button', leaf: true}
 				]},
