* HTML5 Open Reference Guide SNB 요소메뉴 추가 [I]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -79,12 +79,12 @@ Ext.onReady(function(){
 					{text: 'hr', leaf: true, href: ['ext/data/elements/hr.php', 'ext/data/elements/hr_desc.php']},
 					{text: 'html', leaf: true, href: ['ext/data/elements/html.php', 'ext/data/elements/html_desc.php']}
 				]},
-				{text: 'I', expanded: true, children: [
-					{text: 'i', leaf: true},
-					{text: 'iframe', leaf: true},
-					{text: 'img', leaf: true},
-					{text: 'input', leaf: true},
-					{text: 'ins', leaf: true},
+				{text: 'I', expanded: false, children: [
+					{text: 'i', leaf: true, href: ['ext/data/elements/i.php', 'ext/data/elements/i_desc.php']},
+					{text: 'iframe', leaf: true, href: ['ext/data/elements/iframe.php', 'ext/data/elements/iframe_desc.php']},
+					{text: 'img', leaf: true, href: ['ext/data/elements/img.php', 'ext/data/elements/img_desc.php']},
+					{text: 'input', leaf: true, href: ['ext/data/elements/input.php', 'ext/data/elements/input_desc.php']},
+					{text: 'ins', leaf: true, href: ['ext/data/elements/ins.php', 'ext/data/elements/ins_desc.php']},
 				]},
 				{text: 'K', expanded: true, children: [
 					{text: 'kbd', leaf: true},
