* HTML5 Open Reference Guide SNB 요소메뉴 추가 [K-L]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -86,15 +86,15 @@ Ext.onReady(function(){
 					{text: 'input', leaf: true, href: ['ext/data/elements/input.php', 'ext/data/elements/input_desc.php']},
 					{text: 'ins', leaf: true, href: ['ext/data/elements/ins.php', 'ext/data/elements/ins_desc.php']},
 				]},
-				{text: 'K', expanded: true, children: [
-					{text: 'kbd', leaf: true},
-					{text: 'keygen', leaf: true}
+				{text: 'K', expanded: false, children: [
+					{text: 'kbd', leaf: true, href: ['ext/data/elements/kbd.php', 'ext/data/elements/kbd_desc.php']},
+					{text: 'keygen', leaf: true, href: ['ext/data/elements/keygen.php', 'ext/data/elements/keygen_desc.php']}
 				]},
-				{text: 'L', expanded: true, children: [
-					{text: 'label', leaf: true},
-					{text: 'legend', leaf: true},
-					{text: 'li', leaf: true},
-					{text: 'link', leaf: true}
+				{text: 'L', expanded: false, children: [
+					{text: 'label', leaf: true, href: ['ext/data/elements/label.php', 'ext/data/elements/label_desc.php']},
+					{text: 'legend', leaf: true, href: ['ext/data/elements/legend.php', 'ext/data/elements/legend_desc.php']},
+					{text: 'li', leaf: true, href: ['ext/data/elements/li.php', 'ext/data/elements/li_desc.php']},
+					{text: 'link', leaf: true, href: ['ext/data/elements/link.php', 'ext/data/elements/link_desc.php']}
 				]},
 				{text: 'M', expanded: true, children: [
 					{text: 'map', leaf: true},
