* HTML5 Open Reference Guide SNB 요소메뉴 추가 [M]:미완료

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -97,8 +97,8 @@ Ext.onReady(function(){
 					{text: 'link', leaf: true, href: ['ext/data/elements/link.php', 'ext/data/elements/link_desc.php']}
 				]},
 				{text: 'M', expanded: true, children: [
-					{text: 'map', leaf: true},
-					{text: 'mark', leaf: true},
+					{text: 'map', leaf: true, href: ['ext/data/elements/map.php', 'ext/data/elements/map_desc.php']},
+					{text: 'mark', leaf: true, href: ['ext/data/elements/mark.php', 'ext/data/elements/mark_desc.php']},
 					{text: 'menu', leaf: true},
 					{text: 'meta', leaf: true},
 					{text: 'meter', leaf: true}
