* HTML5 Open Reference Guide SNB 요소메뉴 추가 [S]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -128,18 +128,19 @@ Ext.onReady(function(){
 					{text: 'rt', leaf: true, href: ['ext/data/elements/rt.php', 'ext/data/elements/rt_desc.php']},
 					{text: 'ruby', leaf: true, href: ['ext/data/elements/ruby.php', 'ext/data/elements/ruby_desc.php']}
 				]},
-				{text: 'S', expanded: true, children: [
-					{text: 'samp', leaf: true},
-					{text: 'script', leaf: true},
-					{text: 'section', leaf: true},
-					{text: 'select', leaf: true},
-					{text: 'small', leaf: true},
-					{text: 'source', leaf: true},
-					{text: 'span', leaf: true},
-					{text: 'strong', leaf: true},
-					{text: 'style', leaf: true},
-					{text: 'sub&frasl;sup', leaf: true},
-					{text: 'summary', leaf: true}
+				{text: 'S', expanded: false, children: [
+					{text: 's', leaf: true, href: ['ext/data/elements/s.php', 'ext/data/elements/s_desc.php']},
+					{text: 'samp', leaf: true, href: ['ext/data/elements/samp.php', 'ext/data/elements/samp_desc.php']},
+					{text: 'script', leaf: true, href: ['ext/data/elements/script.php', 'ext/data/elements/script_desc.php']},
+					{text: 'section', leaf: true, href: ['ext/data/elements/section.php', 'ext/data/elements/section_desc.php']},
+					{text: 'select', leaf: true, href: ['ext/data/elements/select.php', 'ext/data/elements/select_desc.php']},
+					{text: 'small', leaf: true, href: ['ext/data/elements/small.php', 'ext/data/elements/small_desc.php']},
+					{text: 'source', leaf: true, href: ['ext/data/elements/source.php', 'ext/data/elements/source_desc.php']},
+					{text: 'span', leaf: true, href: ['ext/data/elements/span.php', 'ext/data/elements/span_desc.php']},
+					{text: 'strong', leaf: true, href: ['ext/data/elements/strong.php', 'ext/data/elements/strong_desc.php']},
+					{text: 'style', leaf: true, href: ['ext/data/elements/style.php', 'ext/data/elements/style_desc.php']},
+					{text: 'sub&frasl;sup', leaf: true, href: ['ext/data/elements/sub_sup.php', 'ext/data/elements/sub_sup_desc.php']},
+					{text: 'summary', leaf: true, href: ['ext/data/elements/summary.php', 'ext/data/elements/summary_desc.php']}
 				]},
 				{text: 'T', expanded: true, children: [
 					{text: 'table', leaf: true},
