* HTML5 Open Reference Guide SNB 요소메뉴 추가 [T]

--- a/branches/p_130510_html5_OR/index.html
+++ b/branches/p_130510_html5_OR/index.html
@@ -142,18 +142,18 @@ Ext.onReady(function(){
 					{text: 'sub&frasl;sup', leaf: true, href: ['ext/data/elements/sub_sup.php', 'ext/data/elements/sub_sup_desc.php']},
 					{text: 'summary', leaf: true, href: ['ext/data/elements/summary.php', 'ext/data/elements/summary_desc.php']}
 				]},
-				{text: 'T', expanded: true, children: [
-					{text: 'table', leaf: true},
-					{text: 'tbody', leaf: true},
-					{text: 'td', leaf: true},
-					{text: 'textarea', leaf: true},
-					{text: 'tfoot', leaf: true},
-					{text: 'th', leaf: true},
-					{text: 'thead', leaf: true},
-					{text: 'time', leaf: true},
-					{text: 'title', leaf: true},
-					{text: 'tr', leaf: true},
-					{text: 'track', leaf: true}
+				{text: 'T', expanded: false, children: [
+					{text: 'table', leaf: true, href: ['ext/data/elements/table.php', 'ext/data/elements/table_desc.php']},
+					{text: 'tbody', leaf: true, href: ['ext/data/elements/tbody.php', 'ext/data/elements/tbody_desc.php']},
+					{text: 'td', leaf: true, href: ['ext/data/elements/td.php', 'ext/data/elements/td_desc.php']},
+					{text: 'textarea', leaf: true, href: ['ext/data/elements/textarea.php', 'ext/data/elements/textarea_desc.php']},
+					{text: 'tfoot', leaf: true, href: ['ext/data/elements/tfoot.php', 'ext/data/elements/tfoot_desc.php']},
+					{text: 'th', leaf: true, href: ['ext/data/elements/th.php', 'ext/data/elements/th_desc.php']},
+					{text: 'thead', leaf: true, href: ['ext/data/elements/thead.php', 'ext/data/elements/thead_desc.php']},
+					{text: 'time', leaf: true, href: ['ext/data/elements/time.php', 'ext/data/elements/time_desc.php']},
+					{text: 'title', leaf: true, href: ['ext/data/elements/title.php', 'ext/data/elements/title_desc.php']},
+					{text: 'tr', leaf: true, href: ['ext/data/elements/tr.php', 'ext/data/elements/tr_desc.php']},
+					{text: 'track', leaf: true, href: ['ext/data/elements/track.php', 'ext/data/elements/track_desc.php']}
 				]},
 				{text: 'U', expanded: true, children: [
 					{text: 'ul', leaf: true}
